@@ -4,6 +4,8 @@ Changes in stable release 2.4.19 (not released yet)
 
 * Fixed BackingStore style option.
 
+* Fixed MoveToDesk commend with a single argument.
+
 -------------------------------------------------------------------
 
 Changes in stable release 2.4.18 (19-Mar-2004)
