@@ -1,3 +1,10 @@
+2004-04-05  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/virtual.c (GetDeskNumber):
+	(CMD_GotoDesk):
+	(CMD_MoveToDesk):
+	fixed MoveToDesk with one argument
+
 2004-03-29  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/add_window.c (setup_frame_attributes):
